--- a/package.json
+++ b/package.json
@@ -1,53 +1,67 @@
 {
-  "name": "typescript-nextjs-starter",
-  "description": "A TypeScript starter for Next.js that includes all you need to build amazing projects",
-  "version": "1.0.0",
-  "private": true,
-  "author": "João Pedro Schmitz <hey@joaopedro.dev> (@jpedroschmitz)",
-  "license": "MIT",
-  "keywords": [
-    "nextjs",
-    "starter",
-    "typescript"
-  ],
-  "scripts": {
-    "dev": "next",
-    "build": "next build",
-    "start": "next start",
-    "type-check": "tsc --noEmit",
-    "lint": "eslint --ignore-path .gitignore \"src/**/*.+(ts|js|tsx)\"",
-    "format": "prettier --ignore-path .gitignore \"src/**/*.+(ts|js|tsx)\" --write",
-    "postinstall": "husky install"
-  },
-  "lint-staged": {
-    "./src/**/*.{ts,js,jsx,tsx}": [
-      "eslint --ignore-path .gitignore --fix",
-      "prettier --ignore-path .gitignore --write"
-    ]
-  },
-  "dependencies": {
-    "@next/font": "13.1.6",
-    "next": "13.1.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  },
-  "devDependencies": {
-    "@commitlint/cli": "17.4.2",
-    "@commitlint/config-conventional": "17.4.2",
-    "@types/node": "18.13.0",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.10",
-    "@typescript-eslint/eslint-plugin": "5.51.0",
-    "@typescript-eslint/parser": "5.51.0",
-    "eslint": "8.34.0",
-    "eslint-config-next": "13.1.6",
-    "eslint-config-prettier": "8.6.0",
-    "eslint-import-resolver-typescript": "3.5.3",
-    "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-prettier": "4.2.1",
-    "husky": "8.0.3",
-    "lint-staged": "13.1.1",
-    "prettier": "2.8.4",
-    "typescript": "4.9.5"
-  }
+    "name": "typescript-nextjs-starter",
+    "description": "A TypeScript starter for Next.js that includes all you need to build amazing projects",
+    "version": "1.0.0",
+    "private": true,
+    "author": "João Pedro Schmitz <hey@joaopedro.dev> (@jpedroschmitz)",
+    "license": "MIT",
+    "keywords": [
+        "nextjs",
+        "starter",
+        "typescript"
+    ],
+    "scripts": {
+        "dev": "next",
+        "build": "next build",
+        "start": "next start",
+        "type-check": "tsc --noEmit",
+        "lint": "eslint --ignore-path .gitignore \"src/**/*.+(ts|js|tsx)\"",
+        "format": "prettier --ignore-path .gitignore \"src/**/*.+(ts|js|tsx)\" --write",
+        "postinstall": "husky install"
+    },
+    "lint-staged": {
+        "./src/**/*.{ts,js,jsx,tsx}": [
+            "eslint --ignore-path .gitignore --fix",
+            "prettier --ignore-path .gitignore --write"
+        ]
+    },
+    "dependencies": {
+        "@emotion/react": "11.10.5",
+        "@emotion/styled": "11.10.5",
+        "@faker-js/faker": "7.6.0",
+        "@mui/icons-material": "5.11.9",
+        "@mui/material": "5.11.9",
+        "@mui/styles": "5.11.9",
+        "@next/font": "13.1.6",
+        "@tanstack/match-sorter-utils": "8.7.6",
+        "@tanstack/react-query": "4.24.6",
+        "@tanstack/react-table": "8.7.9",
+        "@tanstack/table-core": "8.7.9",
+        "axios": "1.3.3",
+        "axios-mock-adapter": "1.21.2",
+        "material-react-table": "1.7.4",
+        "mui-button": "1.0.8",
+        "next": "13.1.6",
+        "react": "18.2.0",
+        "react-dom": "18.2.0"
+    },
+    "devDependencies": {
+        "@commitlint/cli": "17.4.2",
+        "@commitlint/config-conventional": "17.4.2",
+        "@types/node": "18.13.0",
+        "@types/react": "18.0.28",
+        "@types/react-dom": "18.0.10",
+        "@typescript-eslint/eslint-plugin": "5.51.0",
+        "@typescript-eslint/parser": "5.51.0",
+        "eslint": "8.34.0",
+        "eslint-config-next": "13.1.6",
+        "eslint-config-prettier": "8.6.0",
+        "eslint-import-resolver-typescript": "3.5.3",
+        "eslint-plugin-import": "2.27.5",
+        "eslint-plugin-prettier": "4.2.1",
+        "husky": "8.0.3",
+        "lint-staged": "13.1.1",
+        "prettier": "2.8.4",
+        "typescript": "4.9.5"
+    }
 }
